--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,15 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+ledgerstore = "0.1.1"
+nonempty = { version = "0.11.0", features = ["serialize"] }
+uuid = { version = "1.17.0", features = ["serde", "v4"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.128"
+reformy = "0.1.6"
+dirs = "6.0.0"
+crossterm = { version = "0.28.1" }
+ratatui = {version = "0.29.0", features = ["unstable-widget-ref"]}
+tui-textarea = "0.7.0"
+reformy-core = "0.1.1"
+
